# drugforge

./: .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: alchemy.yaml  cli.yaml  data.yaml  dataviz.yaml  docking.yaml  ml.yaml  (+5 more)
asapdiscovery-docking/: pyproject.toml
asapdiscovery-spectrum/: pyproject.toml
asapdiscovery-workflows/: pyproject.toml
devtools/: README.md  detect_imports.py  repo_installer.sh  workflows_deps.yaml
docs/: Makefile  README.md  conf.py  index.md  installation.md  make.bat  requirements.yaml
drugforge-alchemy/: README.md  pyproject.toml
drugforge-cli/: MANIFEST.in  README.md  pyproject.toml
drugforge-cli/drugforge/cli/: __init__.py  cli.py  cli_args.py
drugforge-cli/drugforge/cli/tests/: test_meta_cli.py
drugforge-data/: README.md  pyproject.toml
drugforge-dataviz/: README.md  pyproject.toml
drugforge-docking/: pyproject.toml
drugforge-ml/: LICENSE  README.md  pyproject.toml
drugforge-modeling/: pyproject.toml
drugforge-simulation/: README.md  pyproject.toml
drugforge-spectrum/: README.md  pyproject.toml
drugforge-workflows/: MANIFEST.in  README.md  pyproject.toml
examples/: docking_and_scoring.ipynb  exploring_related_sequences_and_structures.ipynb  interfacing_with_databases_and_systems.ipynb  ml_data_prep.ipynb  ml_pipeline.md  non_asap_docking_example.ipynb  protein_prep.ipynb  running_md_simulations.ipynb  running_ml_inference.ipynb  start_here.ipynb  training_ml_models_on_asap_data.ipynb  visualizing_asap_targets.ipynb
(+336 files in other folders)
