[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "drugforge-cli"
#version = "0.0.1"
dynamic = ["version"]
authors = [
    { name="ASAP Discovery", email="benjamin.kaminow@choderalab.org" },
    { name="ChoderaLab" },
]
description = "API and scripts related to downloading and interacting with data from the Collaborative Drug Discovery Vault, Fragalysis, and the PDB"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/choderalab/drugforge"
"Bug Tracker" = "https://github.com/choderalab/drugforge/issues"

[project.scripts]
drugforge-cli = "drugforge.cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"
